apps/production/home-assistant/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-headers
  namespace: default
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
